--- a/starter/index.html
+++ b/starter/index.html
@@ -34,11 +34,11 @@
 					<!-- END page-header -->
 				</div>
 				
-				<div class="col-10 text-end">
+				<div class="">
 					<button class="btn btn-success rounded-pill " data-bs-toggle="modal" href="#modal-task"><i class="pe-1 fa fa-plus"></i> Add Task</a>
 				</div>
 			</div>
-			
+		
 			<div class="row">
 
 					<div class="col-lg-4 mb-3 col-sm-6 ">
@@ -47,7 +47,7 @@
 							<h4 class="text-white my-auto px-1">To do (<span id="to-do-tasks-count">5</span>)</h4>
 
 						</div>
-						<div class="" id="to-do-tasks">
+						<div class="" id="to_do_tasks">
 							<!-- TO DO TASKS HERE -->
 							<button class="d-flex  list-group-item w-100 text-start">
 								<div class="mt-1">
@@ -143,7 +143,7 @@
 							<h4 class="text-white my-auto px-1">In Progress (<span id="in-progress-tasks-count">4</span>)</h4>
 						    </div>
 						</div>
-						<div class="" id="in-progress-tasks">
+						<div class="" id="in_progress_tasks">
 							<!-- IN PROGRESS TASKS HERE -->
 							<button class="d-flex list-group-item w-100 text-start">
 								<div class="mt-1">
@@ -218,7 +218,7 @@
 							<h4 class="text-white my-auto px-1">Done (<span id="done-tasks-count">4</span>)</h4>
 
 						</div>
-						<div class=" " id="done-tasks">
+						<div class=" " id="done_tasks">
 							<!-- DONE TASKS HERE -->
 							<button class="d-flex list-group-item w-100 text-start">
 								<div class="mt-1">
@@ -309,45 +309,45 @@
 				<div class="modal-body">
 					<label for="exampleFormControlTextarea1" class="form-label">Title</label>
 					<div class="input-group mb-3">
-						<input type="text" class="form-control" placeholder="Title" aria-label="Username" aria-describedby="basic-addon1">
+						<input type="text" class="form-control" placeholder="Title" aria-label="Username" aria-describedby="basic-addon1" id="modal_title">
 					  </div>
 					  <label for="exampleFormControlTextarea1" class="form-label">Type</label>
 					  <div class="form-check">
-						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+						<input class="form-check-input" type="radio" name="flexRadioDefault" id="modal_featur">
 						<label class="form-check-label" for="flexRadioDefault1">
 					      Feature
 						</label>
 					  </div>
 					  <div class="form-check">
-						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+						<input class="form-check-input" type="radio" name="flexRadioDefault" id="modal_bug"  checked>
 						<label class="form-check-label" for="flexRadioDefault2">
 						 Bug
 						</label>
 					  </div>
 					  <label for="exampleFormControlTextarea1" class="form-label">Priority</label>
-					  <select class="form-select" aria-label="Default select example">
+					  <select class="form-select" aria-label="Default select example" id="modal_priority">
 						<option selected>Please select</option>
-						<option value="1">One</option>
-						<option value="2">Two</option>
-						<option value="3">Three</option>
+						<option value="Low">Low</option>
+						<option value="Medium">Medium</option>
+						<option value="High">High</option>
 					  </select>
 					  <label for="exampleFormControlTextarea1" class="form-label">Status</label>
-					  <select class="form-select" aria-label="Default select example">
+					  <select class="form-select" aria-label="Default select example" id="modal_status">
 						<option selected>Please select</option>
-						<option value="1">One</option>
-						<option value="2">Two</option>
-						<option value="3">Three</option>
+						<option value="To Do">To Do</option>
+						<option value="In Progress">In Progress</option>
+						<option value="Done">Done</option>
 					  </select>
 					  <label for="exampleFormControlTextarea1" class="form-label">Date</label>
-					  <input type="date" id="date" class="form-control">
+					  <input type="date" id="modal_date" class="form-control">
 					  <div class="mb-3">
 						<label for="exampleFormControlTextarea1" class="form-label">Description</label>
-						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+						<textarea class="form-control" id="model_description" rows="3" itemid="Description"></textarea>
 					  </div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-light text-dark" data-bs-dismiss="modal">Cancel</button>
-					<button type="button" class="btn btn-primary">Save</button>
+					<button type="button" class="btn btn-primary" onclick="createTask()">Save</button>
 				</div>
 			  </div>
 			</div>
@@ -358,6 +358,8 @@
 	<!-- ================== BEGIN core-js ================== -->
 	<script src="assets/js/vendor.min.js"></script>
 	<script src="assets/js/app.min.js"></script>
+	<script src="assets/js/data.js"></script>
+	<script src="assets/js/app.js"></script>
 	<!-- ================== END core-js ================== -->
 
 
